# powerplant

./: .gitignore  README.md  pyproject.toml
images/masked/: README.txt
images/masks/: README.txt
images/original/: README.txt
images/resized/: README.txt
metadata/: README.txt  samples.csv
src/powerplant/: dataload.py  model.py  resize.py  scripts.py  segment.py  train.py
